--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.16",
+    "@react-navigation/stack": "^6.3.7",
+    "axios": "^1.2.0",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-bouncy-checkbox": "^3.0.6",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
