--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-reanimated": "^2.13.0",
+    "react-native-reanimated": "~2.12.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
